test: add test for storage